add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     /* navigation menu */
     nav {
-        background: rgb(239, 80, 41);
+        background: gainsboro;
         margin: 0 auto;
         margin-bottom: 20px;
         display: flex;
